fix: Address review comments
As per comments (https://github.com/Degen-Markets/degen-markets-fe/pull/90#discussion_r1772713953,
https://github.com/Degen-Markets/degen-markets-fe/pull/90#discussion_r1772871814)
the styles on the modal were updated (to fix overflowing text), and
the wallet address display name was derived using the `getDisplayNameForAddress`
helper function

--- a/src/app/components/SolanaWallet/index.css
+++ b/src/app/components/SolanaWallet/index.css
@@ -3,6 +3,10 @@
   @apply bg-black-main/10 backdrop-blur-lg fixed inset-0 z-50 transition-all duration-100 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 h-fit font-[inherit] whitespace-nowrap;
 }
 
+.wallet-adapter-modal-title {
+  @apply whitespace-normal;
+}
+
 .wallet-adapter-button-trigger {
   @apply shadow-xl hover:shadow-2xl transition-all duration-150 font-[inherit] rounded-full bg-purple-light focus-visible:bg-purple-medium;
 }
